--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 </head>
 <body>
 
-<h1>Dap.js: for massively interactive web-applications</h1>
-<p>Dap (initially stood for "data access page") is a lightweight javascript framework for interactive data-driven web applications.</p>
-<p>Unlike many other reactive frameworks that build reactivity in terms of Javascript, dap defines dependencies between elements on a higher level of abstraction — by means of declarative rules written in a dedicated "superscript" language. These rules can be extremely compact, efficient and human-readable at the same time; they are lazily parsed, precompiled and executed by the dap runtime script (less than 9kiB gzip), and do not require any other code preparation steps.</p>
+<div	style="text-align:center">
+	<img src="dap-logo.png"/>
+	<h1>Dap.js: for massively interactive web-applications</h1>
+	<p>Dap (initially stood for "data access page") is a lightweight and powerful javascript framework for interactive data-driven web applications.</p>
+	<p>Unlike many other reactive frameworks that build reactivity in terms of Javascript, dap offers a higher level of abstraction — a declarative "superscript" language for elements interaction rules. These rules can be compact, efficient and human-readable at the same time. Dap is parsed, compiled and executed by a small runtime script (less than 8kiB gzipped), and does not require any code preparation.</p>
+</div>
 <pre>
 'H1.welcome'.d("! `Hello,world!") // Create an &lt;H1 class="welcome"&gt; element and print "Hello,world!" text into it
 </pre>
