--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 	<link href="docs/styles.css" rel="stylesheet" type="text/css"/>	
 	<style>
 	header{text-align:center; font-size:1.2em}
-	#whydap{display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 2em;}
+	
+	h2{margin-top:4em}
+	
+	#whydap{display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 3em;}
 	#whydap>section{text-align:center}
 
 	h3{display:inline-block; padding: .4em 1em; background:#fd6}
@@ -14,48 +17,52 @@
 </head>
 <body>
 
-<header>
-	<img src="dap-logo.png"/>
-	<h1>Dap.js: for massively interactive web-applications</h1>
-	<p>Lightweight and powerful javascript framework for interactive data-driven web applications.</p>
-	<p>Unlike many other frameworks built in Javascript terms, dap offers a higher level of abstraction — a declarative "superscript" for reactivity rules. These rules are dense, compact, and human-readable at the same time. Dap is parsed, compiled and executed by a small (less than 10kiB gzipped) runtime script, and does not require code transpilation.</p>
-</header>
-<pre>
-'H1.welcome'.d("! `Hello,world!") // Create an &lt;H1 class="welcome"&gt; element and print "Hello,world!" text into it
-</pre>
+<div style="text-align:center">
+
+	<header>
+		<img src="dap-logo.png"/>
+		<h1>Dap.js: for massively interactive web-applications</h1>
+		<p>Lightweight and powerful javascript framework for interactive data-driven web applications.</p>
+		<p>Unlike some other frameworks relying on Javascript expressive means, dap offers a higher level of abstraction — a declarative "superscript" for reactivity rules. These rules are dense, compact, and human-readable at the same time. Dap templates are parsed, compiled and executed by a small (less than 10kiB gzipped) runtime script, and does not require code transpilation.</p>
+	</header>
+	<pre>
+	'H1.welcome'.d("! `Hello,world!") // Create an &lt;H1 class="welcome"&gt; element and print "Hello,world!" text into it
+	</pre>
 
 
+	<a name="why-dap"></a>
 
-<a name="why-dap"></a>
+	<h2>Why dap?</h2>
 
-<h2>Why dap?</h2>
+	<article id="whydap" style=" ">
 
-<article id="whydap" style=" ">
+		<section>
+			<h3>Clear, concise and observable</h3>
+			<p>Dap allows to focus on data and logic, instead of syntactic decoration. Dap code tends to be times smaller than equivalent solutions for other environments. It is clean and observable, without sparse lines of curly brackets and boilerplate code.</p>
+		</section>
 
-	<section>
-		<h3>Clear, concise and observable</h3>
-		<p>Dap is focused on data and logic, instead of syntactic decoration. Dap code tends to be times smaller than equivalent solutions for other environments. It is clean and observable, without sparse lines of curly brackets and boilerplate code.</p>
-	</section>
+		<section>
+			<h3>Natively reactive</h3>
+			<p>
+			Reactivity is the base concept of dap. No need to manually track status changes, or even bother to bind update events — all dependencies are resolved naturally under the hood. Dap renders and updates all the dependent elements interactively, based on their dap-rules.
+			</p>
+		</section>
 
-	<section>
-		<h3>Natively reactive</h3>
-		<p>
-		Reactivity is the base concept of dap. No need to manually track status changes, or even bother to bind update events — all dependencies are resolved naturally under the hood. Dap renders and updates all the dependent elements interactively, based on their dap-rules.
-		</p>
-	</section>
+		<section>
 
-	<section>
+			<h3>Fast and lightweight</h3>
+			<p>Dap will not introduce any noticeable latency to your Web UI. The dap runtime script is tiny, dap-rules are parsed lazily, DOM manipulations are precise and deterministic, and only involve affected elements.</p>
+		</section>
 
-		<h3>Fast and lightweight</h3>
-		<p>Dap will not introduce any noticeable latency to your Web UI. The dap runtime script is tiny, dap-rules are parsed lazily, DOM manipulations are precise and deterministic, and only involve affected elements.</p>
-	</section>
+		<section>		
+		<h3>Simple to start, easy to advance</h3>
+		<p>A whole lot of magic can be done with the few "stantard" dap operations. But when it's time to go beyond — you can easily expand dap with your own custom operations or use 3-rd party extensions.</p>
+		</section>
 
-	<section>		
-	<h3>Simple to start, easy to advance</h3>
-	<p>A whole lot of magic can be done with the few "stantard" dap operations. But when it's time to go beyond — you can easily expand dap with your own custom operations or use 3-rd party extensions.</p>
-	</section>
+	</article>
 
-</article>
+</div>
+
 
 <section>
 <h2>Dap code example, explained</h2>
@@ -69,7 +76,7 @@
 	)
 	,'nothing'.d("? $choice:!; ! nothing") // if $choice is not set, print a message to let us know
 )
-.DICT({ // strings and other constants are supposed to be defined here, not inside the rules
+.DICT({ // strings and other constants are supposed to be defined here in dictionary, not inside the rules
 	title:"My favorite fruit is ", // textual messages gathered in one place are easier to maintain and localize if needed
 	nothing:"Nothing selected yet",
 	"not-yet":"what?", // hyphens and other symbols are okay for entry names, as long as they are quoted
@@ -77,7 +84,7 @@
 })
 .INLINE() // render this dap into the current place of document
 </pre>
-<p>Dap code may seem a little bit unusual, but it is a pure Javascript, with slightly uncommon formatting to better reflex dap program structure. All you need to run dap in an .html document is a <code>&lt;script src="http://jooher.github.io/dap/0.4.3.js"&gt;&lt;/script&gt;</code> somewhere before actual dap code (usually, in the <code>head</code> section).<!--You are also welcome to play with the code right here, the code examples are editable.--></p>
+<p>Dap code may seem a little bit unusual, but it is a pure Javascript, with slightly uncommon formatting to better reflex dap program structure. All you need to run dap in an .html document is a <code>&lt;script src="https://dap.js.org/0.4.js"&gt;&lt;/script&gt;</code> somewhere before actual dap code (usually, in the <code>head</code> section).<!--You are also welcome to play with the code right here, the code examples are editable.--></p>
 <p>From this example you can see DOM-element templates being denoted by single quoted strings (in a slightly shorter notation than used in HTML). Single quotes are just a matter of style, they help to tell protos from other strings and facilitate code highlighting.</p>
 Templates are rendered into actual DOM elements, from parent node <em>down</em> to child elements, according to their d-rules ("down"-phase rules) specified by <code>.d()</code> method. Some protos have u-rules for "up"-phase, when events bubble <em>up</em> through the node towards the root. In the example above, the <code>LI</code>element is given its u-rule by means of <code>.ui()</code> method, which also binds a default UI event (usually, click) listener.</p>
 <p>Rules in the example are very simple. You can see the three most common dap operators here:</p>
@@ -96,13 +103,16 @@ Templates are rendered into actual DOM elements, from parent node <em>down</em> 
 <p>So far, quite simple, isn't it? To dive deeper, go further with <a href="docs/">Understanding dap</a>.</p>
 </section>
 
-<h3>Dap and other reactive frameworks</h3>
-<p>Unlike some other frameworks, dap does not imply any specific directory structure for your application. Simple web-applications can easily consist of a single, static HTML file, maybe accompanied with a CSS stylesheet or other usual stuff, plus any related data sources. For more complex projects, organization is up to the developer.</p>
-<p>Below are a few simple examples of how easily data/event-driven applications can be built with dap. Examples below are inspired by the examples from other reactive frameworks, such as React.js, Angular, etc. so if you're familiar with any of those, you're welcome compare the ideas and approaches behind dap and other frameworks.</p>
-<ul>
-	<li><a href="0.4.3/samples/titactoe.html">Tic Tac Toe</a>. Inspired by the <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank" rel="nofollow">React tutorial</a></li>
-	<li><a href="0.4.3/samples/toh.html">Tour of Heroes</a>. Inspired by <a href="https://angular.io/tutorial/" target="_blank" rel="nofollow">Angular tutorial</a></li>
-</ul>
+<article>
+	<h2>Dap and other reactive frameworks</h2>
+	<p>Below are a few simple examples of how easily data/event-driven applications can be built with dap. Examples below are inspired by the examples from other reactive frameworks, such as React, Angular, etc. so if you're familiar with any of those, you're welcome compare the ideas and approaches behind dap and other frameworks.</p>
+	<ul>
+		<li><a href="0.4.3/samples/titactoe.html">Tic Tac Toe</a>. Inspired by the <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank" rel="nofollow">React tutorial</a></li>
+		<li><a href="0.4.3/samples/toh.html">Tour of Heroes</a>. Inspired by <a href="https://angular.io/tutorial/" target="_blank" rel="nofollow">Angular tutorial</a></li>
+	</ul>
+</article>
+
+
 
 <p>Coming soon: writing a real-world dap application</p>
 
