--- a/samples/helloforum.html
+++ b/samples/helloforum.html
@@ -4,8 +4,7 @@
 
 <head>
 	<title>Hello Forum</title>
-	<!--<script src="https://dap.js.org/0.4.3.js"></script>-->
-	<script src="/0.4.4.js"></script>
+	<script src="https://dap.js.org/0.4.js"></script>
 	<link rel="stylesheet" href="helloforum.css"/>
 </head>
 
