--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
 <div style="text-align:center">
 
 	<header>
-		<img src="dap-logo.png"/>
+		<img src="dap-logo.png"/><br/><a href="https://github.com/jooher/dap">https://github.com/jooher/dap</a>
 		<h1>Dap.js: for massively interactive web-applications</h1>
 		<p>Lightweight and powerful javascript framework for interactive data-driven web applications.</p>
 		<p>Unlike some other frameworks relying on Javascript expressive means, dap offers a higher level of abstraction — a declarative "superscript" for reactivity rules. These rules are dense, compact, and human-readable at the same time. Dap templates are parsed, compiled and executed by a small (less than 10kiB gzipped) runtime script, and does not require code transpilation.</p>
 	</header>
-	<pre>
-	'H1.welcome'.d("! `Hello,world!") // Create an &lt;H1 class="welcome"&gt; element and print "Hello,world!" text into it
-	</pre>
+	<pre>'H1.welcome'.d("! `Hello,world!") // Create an &lt;H1 class="welcome"&gt; element and print "Hello,world!" text into it</pre>
 
 
 	<a name="why-dap"></a>
@@ -56,7 +54,7 @@
 
 		<section>		
 		<h3>Simple to start, easy to advance</h3>
-		<p>A whole lot of magic can be done with the few "stantard" dap operations. But when it's time to go beyond — you can easily expand dap with your own custom operations or use 3-rd party extensions.</p>
+		<p>A whole lot of magic can be done with the few "standard" dap operations. But when it's time to go beyond — you can easily expand dap with your own custom operations or use third party extensions.</p>
 		</section>
 
 	</article>
