--- a/samples/tictactoe.html
+++ b/samples/tictactoe.html
@@ -5,7 +5,7 @@
 <head>
 	<title>Tic Tac Toe - dap example</title>
 	<!--script src="http://jooher.github.io/dap/0.4.3.js"></script-->
-	<script src="../../0.4.3.js"></script>
+	<script src="https://dap.js.org/0.4.js"></script>
 	<style>
 		body{font:normal 1em sans-serif}
 		.board,.history{ display:inline-block; width:10em; vertical-align:top; }
@@ -74,7 +74,7 @@ var TicTacToe=(function(){
 	)
 )
 
-.EXT({
+.FUNC({
 	convert:TicTacToe
 })
 
