--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div style="text-align:center">
 
 	<header>
-		<img src="dap-logo.png"/><br/><a href="https://github.com/jooher/dap">https://github.com/jooher/dap</a>
+		<img src="stuff/dap-logo.png"/><br/><a href="https://github.com/jooher/dap">https://github.com/jooher/dap</a>
 		<h1>Dap.js: for massively interactive web-applications</h1>
 		<p>Lightweight and powerful javascript framework for interactive data-driven web applications.</p>
 		<p>Unlike some other frameworks relying on Javascript expressive means, dap offers a higher level of abstraction — a declarative "superscript" for reactivity rules. These rules are dense, compact, and human-readable at the same time. Dap templates are parsed, compiled and executed by a small (less than 10kiB gzipped) runtime script, and does not require code transpilation.</p>
