--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	title:"My favorite fruit is ", // textual messages gathered in one place are easier to maintain and localize if needed
 	nothing:"Nothing selected yet",
 	"not-yet":"what?", // hyphens and other symbols are okay for entry names, as long as they are quoted
-	fruit:["apple","orange","tomato","banana"] // datasets data may be ordinary arrays containing any kind of data
+	fruit:["apple","orange","tomato","banana"] // datasets can be ordinary arrays containing any kind of data
 })
 </pre>
 <p>Dap code may seem a little bit unusual, but it is a pure Javascript, with slightly uncommon formatting to better reflex dap program structure. All you need to run dap in an .html document is a <code>&lt;script src="https://dap.js.org/0.4.js"&gt;&lt;/script&gt;</code> somewhere before actual dap code (usually, in the <code>head</code> section).<!--You are also welcome to play with the code right here, the code examples are editable.--></p>
