--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </pre>
 <p>Dap code may seem a little bit unusual, but it is a pure Javascript, with slightly uncommon formatting to better reflex dap program structure. All you need to run dap in an .html document is a <code>&lt;script src="https://dap.js.org/0.4.js"&gt;&lt;/script&gt;</code> somewhere before actual dap code (usually, in the <code>head</code> section).<!--You are also welcome to play with the code right here, the code examples are editable.--></p>
 <p>From this example you can see DOM-element templates being denoted by single quoted strings (in a slightly shorter notation than used in HTML). Single quotes are just a matter of style, they help to tell protos from other strings and facilitate code highlighting.</p>
-Templates are rendered into actual DOM elements, from parent node <em>down</em> to child elements, according to their d-rules ("down"-phase rules) specified by <code>.d()</code> method. Some protos have u-rules for "up"-phase, when events bubble <em>up</em> through the node towards the root. In the example above, the <code>LI</code>element is given its u-rule by means of <code>.ui()</code> method, which also binds a default UI event (usually, click) listener.</p>
+Templates are rendered into actual DOM elements, from parent node <em>down</em> to child elements, according to their d-rules ("down"-phase rules) specified by <code>.d()</code> method. Some protos have u-rules for "up"-phase, when events bubble <em>up</em> through the node towards the root. In the example above, the <code>LI</code> element is given its u-rule by means of <code>.ui()</code> method, which also binds a default UI event (usually, click) listener.</p>
 <p>Rules in the example are very simple. You can see the three most common dap operators here:</p>
 <ul>
 	<li><code>!</code> - "print" operator, that simply prints its arguments into resulting node</li>
@@ -104,8 +104,8 @@ Templates are rendered into actual DOM elements, from parent node <em>down</em> 
 	<h2>Dap and other reactive frameworks</h2>
 	<p>Below are a few simple examples of how easily data/event-driven applications can be built with dap. Examples below are inspired by the examples from other reactive frameworks, such as React, Angular, etc. so if you're familiar with any of those, you're welcome compare the ideas and approaches behind dap and other frameworks.</p>
 	<ul>
-		<li><a href="0.4.3/samples/titactoe.html">Tic Tac Toe</a>. Inspired by <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank" rel="nofollow">React tutorial</a></li>
-		<li><a href="0.4.3/samples/toh.html">Tour of Heroes</a>. Inspired by <a href="https://angular.io/tutorial/" target="_blank" rel="nofollow">Angular tutorial</a></li>
+		<li><a href="samples/titactoe.html">Tic Tac Toe</a>. Inspired by <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank" rel="nofollow">React tutorial</a></li>
+		<li><a href="samples/toh.html">Tour of Heroes</a>. Inspired by <a href="https://angular.io/tutorial/" target="_blank" rel="nofollow">Angular tutorial</a></li>
 	</ul>
 </article>
 
