--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Templates are rendered into actual DOM elements, from parent node <em>down</em> 
 	<h2>Dap and other reactive frameworks</h2>
 	<p>Below are a few simple examples of how easily data/event-driven applications can be built with dap. Examples below are inspired by the examples from other reactive frameworks, such as React, Angular, etc. so if you're familiar with any of those, you're welcome compare the ideas and approaches behind dap and other frameworks.</p>
 	<ul>
-		<li><a href="samples/titactoe.html">Tic Tac Toe</a>. Inspired by <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank" rel="nofollow">React tutorial</a></li>
+		<li><a href="samples/tictactoe.html">Tic Tac Toe</a>. Inspired by <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank" rel="nofollow">React tutorial</a></li>
 		<li><a href="samples/toh.html">Tour of Heroes</a>. Inspired by <a href="https://angular.io/tutorial/" target="_blank" rel="nofollow">Angular tutorial</a></li>
 	</ul>
 </article>
