--- a/index.html
+++ b/index.html
@@ -3,17 +3,6 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Dap.js</title>
 	<link href="docs/styles.css" rel="stylesheet" type="text/css"/>	
-	<style>
-	header{text-align:center; font-size:1.2em}
-	
-	h2{margin-top:4em}
-	
-	#whydap{display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 3em;}
-	#whydap>section{text-align:center}
-
-	h3{display:inline-block; padding: .4em 1em; background:#fd6}
-	</style>
-	</style>
 </head>
 <body>
 
@@ -116,8 +105,10 @@ Templates are rendered into actual DOM elements, from parent node <em>down</em> 
 </body>
 
 <script src="0.4.js"></script>
-<script src="docs/dapify.js"></script>
+<script src="stuff/dapify.js"></script>
 
+<link href="stuff/talks.css" rel="stylesheet" type="text/css"/>	
+<script src="stuff/talks.js#msg=2"></script>
 
 </html>
 
