--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		<section>		
 		<h3>Simple to start, easy to advance</h3>
-		<p>A whole lot of magic can be done with the few "standard" dap operations. But when it's time to go beyond — you can easily expand dap with your own custom operations or use third party extensions.</p>
+		<p>A whole lot of magic can be done with the few "core" dap operations. But when it's time to go beyond — you can easily expand dap with your own custom operations or use third party extensions.</p>
 		</section>
 
 	</article>
@@ -103,12 +103,14 @@ Templates are rendered into actual DOM elements, from parent node <em>down</em> 
 <p>Coming soon: writing a real-world dap application</p>
 
 </body>
-
+<!--
 <script src="0.4.js"></script>
-<script src="stuff/dapify.js"></script>
+-->
+<script src="https://cdn.jsdelivr.net/gh/jooher/dap/0.4.min.js"/>
+<script src="/stuff/dapify.js"></script>
 
-<link href="stuff/talks.css" rel="stylesheet" type="text/css"/>	
-<script src="stuff/talks.js#msg=7"></script>
+<link href="/stuff/talks.css" rel="stylesheet" type="text/css"/>	
+<script src="/stuff/talks.js#msg=7"></script>
 
 </html>
 
