--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Templates are rendered into actual DOM elements, from parent node <em>down</em> 
 <!--
 <script src="0.4.js"></script>
 -->
-<script src="https://cdn.jsdelivr.net/gh/jooher/dap/0.4.min.js"/>
+<script src="https://cdn.jsdelivr.net/gh/jooher/dap/0.4.min.js"></script>
 <script src="/stuff/dapify.js"></script>
 
 <link href="/stuff/talks.css" rel="stylesheet" type="text/css"/>	
