--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@ Templates are rendered into actual DOM elements, from parent node <em>down</em> 
 </ul>
 </section>
 
-<p>So far, quite simple, isn't it? To dive deeper, go further with <a href="docs/">Understanding dap</a>.</p>
+<h3>So far, so simple, isn't it?</h3>
+<img src="docs/we_need_to_go_deeper.jpg" alt="But we need to go deeper" title="But we need to go deeper"/>
+<p>Now, let's go deeper with <a href="docs/">Understanding dap</a>!</p>
 
 
 <article>
