--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<section>
 			<h3>Natively reactive</h3>
 			<p>
-			Reactivity is the base concept of dap. No need to manually track status changes, or even bother binding update events — all dependencies are resolved naturally under the hood. Dap renders and updates all the dependent elements interactively, based on their dap-rules.
+			Reactivity is the base concept of dap. No need to manually track status changes, or even bother binding update events — all dependencies are resolved naturally under the hood. Dap renders and updates all the dependent elements automatically, based on their dap-rules.
 			</p>
 		</section>
 
