--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<p>Lightweight and powerful javascript framework for interactive data-driven web applications.</p>
 		<p>Unlike some other frameworks relying on Javascript expressive means, dap offers a higher level of abstraction — a declarative "superscript" for reactivity rules. These rules are dense, compact, and human-readable at the same time. Dap code is parsed, compiled and executed by a small (less than 9kiB gzipped) runtime script, and does not require code transpilation.</p>
 	</header>
-	<pre class="dap">'B'.d("! `Hello,world!")</pre>
+	<pre class="dap">'DIV'.d("! `Hello,world!")</pre>
 
 
 	<a name="why-dap"></a>
