--- a/samples/toh.html
+++ b/samples/toh.html
@@ -3,8 +3,9 @@
 <html>
 
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Tour of Heroes - dap example</title>
-	<script src="https://dap.js.org/0.4.js"></script>
+	<script src="/0.4.js"></script>
 	<link href="styles.css" rel="stylesheet" type="text/css"/>	
 	<link href="toh.css" rel="stylesheet" type="text/css"/>	
 </head>
